--- a/index.html
+++ b/index.html
@@ -1,25 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<title>Willkommen!</title>
-</head>
-<body>
-<header>
-	<h1>Willkommen!</h1>
-</header>
-<article>
-	<p>
-		Diese Seite wird von Ihrem eigenen Webserver auf Ihrem eigenen Rechner unter der Top-Level-Domain
-		<a href="http://localhost">localhost</a> ausgeliefert.
-	</p>
-	<p>
-		Sie werden hier Ihre Website erstellen, auf der Sie auch ohne Internetzugang surfen können.
-		Erst wenn Sie mit Ihrer Arbeit zufrieden sind, geht's in die Cloud.
-	</p>
-	<p>
-		Ihr Kursteam
-	</p>
-</article>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
+<title>Welcome!</title>
+
+</head>
+
+<body>
+
+<header>
+
+	<h1>Welcome!</h1>
+
+</header>
+
+<article>
+
+	<p>
+
+		Download this and install with your local host server and try localhost.
+		<a href="http://localhost">localhost</a> ausgeliefert.
+
+	</p>
+
+	<p>
+
+		Sie werden hier Ihre Website erstellen, auf der Sie auch ohne Internetzugang surfen kï¿½nnen.
+
+		Erst wenn Sie mit Ihrer Arbeit zufrieden sind, geht's in die Cloud.
+
+	</p>
+
+	<p>
+
+		by pkhighfile
+
+	</p>
+
+</article>
+
+</body>
+
+</html>
+
